task-0012:fix: Fixing header and menu layout on mobile and desktop

--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -4,60 +4,76 @@
 }
 
 .base-header {
-    
-    background: var(--color-background-container);
 
-    flex-direction: column;
-
+    background: var(--color-background-container);  
     grid-area: cabecalho;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+
+    width: 100%;
 }
 
-    .base-header__title {
 
-        align-items: center;
+    .base-header__content {
 
-        font-size: 3rem;
-        font-weight: 800;
+        display: flex;
+        flex-direction: column;
+        width: 15%;
+        height: 100%;
+        position: fixed;
 
-        height: 10rem;
-        
-        justify-content: center;
-
-        width: 100%;
     }
 
-    .base-header__profile-image {
+        .base-header__content___title {
 
-        align-self: center;
-        background: url('../img/user/teste.jpg') center/ cover no-repeat;
-        border: 5px solid white;
-        border-radius: 100px;
-        height: 7rem;
-        margin-bottom: .7rem;
-        width: 7rem;
-        transition: .2s ease-in-out;
-    }
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-        .base-header__profile-image:hover {
-            border: 5px solid var(--color-base);
+            font-size: 3rem;
+            font-weight: 800;
+
+            height: 10rem;
+            
         }
-    
-    .base-header__profile-name {
-        
-        margin: 0 auto;
-        margin-bottom: 1rem;
-    }
 
-    .base-header__menu {
+        .base-header__content___profile {
 
+            display: flex;
+            flex-direction: column;
+        }
+
+            .base-header__content___profile--image {
+
+                align-self: center;
+                background: url('../img/user/teste.jpg') center/ cover no-repeat;
+                border: 5px solid white;
+                border-radius: 100px;
+                height: 7rem;
+                margin-bottom: .7rem;
+                width: 7rem;
+                transition: .2s ease-in-out;
+            }
+
+                .base-header__content___profile--image:hover {
+                    border: 5px solid var(--color-base);
+                }
+            
+            .base-header__content___profile--name {
+                
+                margin: 0 auto;
+                margin-bottom: 1rem;
+            }
+
+    .base-header__content___menu {
+
+        display: flex;
         flex-direction: column;
     }
 
-        .base-header__menu--item {
+        .base-header__content___menu--item {
 
-
+            display: flex;
             align-items: center;
             justify-content: flex-start;
             
@@ -72,41 +88,41 @@
             box-sizing: border-box;
         }
 
-            .base-header__menu--item::before {
+            .base-header__content___menu--item::before {
 
                 filter: invert(100%);
                 margin: 0px 10px;
             }
 
-            .base-header__menu--item:nth-child(1)::before {
+            .base-header__content___menu--item:nth-child(1)::before {
 
                 content: url('../../assets/img/icons/home_icon.png');
             }
 
-            .base-header__menu--item:nth-child(2)::before {
+            .base-header__content___menu--item:nth-child(2)::before {
 
                 content: url('../../assets/img/icons/ticket_outline_icon.png');
                 height: 32px;
             }
 
-            .base-header__menu--item:nth-child(3)::before {
+            .base-header__content___menu--item:nth-child(3)::before {
 
                 content: url('../../assets/img/icons/movie_play_icon.png');
                 height: 32px;
             }
 
-            .base-header__menu--item:nth-child(4)::before {
+            .base-header__content___menu--item:nth-child(4)::before {
 
                 content: url('../../assets/img/icons/cinema_film_movie_multimedia_video_icon.png');
             }
 
-            .base-header__menu--item:nth-child(5)::before {
+            .base-header__content___menu--item:nth-child(5)::before {
 
                 content: url('../../assets/img/icons/access_enter_input_login_sign\ in_icon.png');
                 height: 27px;
             }
         
-        .base-header__menu--item:hover {
+        .base-header__content___menu--item:hover {
             
             cursor: pointer;
             background-image: linear-gradient(to right, var(--color-background-base), var(--color-background-container));
@@ -126,68 +142,81 @@
         transition: .3s ease-in-out;
     }
 
-    .base-header__mobile {
-
-        position: absolute;
-
-        display: flex;
-        justify-content: flex-end;
+    .base-header__content {
 
         width: 100%;
+        position: relative;
+        height: max-content;
+        background: var(--color-background-container);
     }
 
-        .base-header__mobile--icon {
-            content: url('../../assets/img/211688_forward_arrow_icon.png');
+        .base-header__content___mobile {
 
-            filter: invert(100%);
-            margin-top: 10px;
-            margin-right: 10px;
+            position: absolute;
 
-            height: 3.5rem;
-            transform: rotateY(180deg);
+            display: flex;
+            justify-content: flex-end;
+
+            width: 100%;
         }
 
-        .base-header__profile-image {
+            .base-header__content___mobile--icon {
+                content: url('../../assets/img/211688_forward_arrow_icon.png');
 
-            height: 8rem;
-            width: 8rem;
+                filter: invert(100%);
+                margin-top: 10px;
+                margin-right: 10px;
+
+                height: 3.5rem;
+                transform: rotateY(180deg);
+            }
+
+        .base-header__content___profile {
+
+            height: auto !important;
         }
 
-        .base-header__profile-name {
-        
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
+            .base-header__content___profile-image {
+
+                height: 8rem;
+                width: 8rem;
+            }
+
+            .base-header__content___profile-name {
+            
+                font-size: 1.2rem;
+                margin-bottom: 2rem;
+            }
 
 
-        .base-header__menu--item {
+        .base-header__content___menu--item {
             
             height: 6rem;
             padding-left: 1rem;
             font-size: 2rem;
         }
 
-            .base-header__menu--item:nth-child(1)::before {
+            .base-header__content___menu--item:nth-child(1)::before {
 
                 content: none;
             }
 
-            .base-header__menu--item:nth-child(2)::before {
+            .base-header__content___menu--item:nth-child(2)::before {
 
                 content: none;
             }
 
-            .base-header__menu--item:nth-child(3)::before {
+            .base-header__content___menu--item:nth-child(3)::before {
 
                 content: none;
             }
 
-            .base-header__menu--item:nth-child(4)::before {
+            .base-header__content___menu--item:nth-child(4)::before {
 
                 content: none;
             }
 
-            .base-header__menu--item:nth-child(5)::before {
+            .base-header__content___menu--item:nth-child(5)::before {
 
                 content: none;
             }
